# ChinaTripInfo

./: .gitignore  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.md  index.rst
docs/source/_static/: custom.css
docs/source/_static/1_1_visa_policy/: country_visa_tags.tsv
docs/source/_static/1_1_visa_policy/policies/: error.md  mutual_30.md  mutual_30_limit_180.md  mutual_30_limit_180::regional_30.md  mutual_30_limit_360::regional_30::transit_10.md  mutual_30_limited_360.md  mutual_30_valid.md  mutual_30_valid::regional_30::transit_10.md  mutual_60.md  mutual_90.md  mutual_90_limited.md  others.md  regional_30.md  regional_30::transit_10.md  transit_10.md  unilateral_30_2025_12.md  unilateral_30_2025_12::regional_30.md  unilateral_30_2025_12::regional_30::transit_10.md  unilateral_30_2026_05.md  unilateral_30_2026_05::regional_30::transit_10.md  unilateral_30_2026_06.md
docs/source/_static/css/: 1_1_visa_policy.css
docs/source/_static/js/: 1_1_visa_policy.js
docs/source/before_you_go/: culture.md  currency.md  customs.md  driving.md  index.md  landing.md  planning.md  roaming.md  roaming_data.md  visa.md  visa_policy.md
docs/source/china_trip_101/: index.md
src/chinatripinfo/: __init__.py
