[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "chinatripinfo"
authors = [{name = "Shangmin Guo", email = "shawnguo.cn@gmail.com"}]
dynamic = ["version", "description"]
dependencies = [
    "myst-parser>=4.0.1",
    "sphinx-book-theme>=1.1.4",
    "sphinx-design>=0.6.1",
]
